--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 
 /*NAV*/
 #container1 {
-  border-bottom: 1px solid #000;
   width: 100%;
   height: 20vh;
 
@@ -28,8 +27,7 @@
 
 #logo {
   width: 50%;
-  height: 107%;
-  border-bottom: 1px solid #000;
+  height: 99%;
 }
 
 #btn1 {
@@ -51,12 +49,12 @@
   border-bottom: 1px solid #000;
   width: 123.5%;
   margin-left: -12%;
-  margin-top: -0.5%;
+  margin-top: 1%;
 }
 
 #listNav li{
   display: inline-block;
-  line-height: 70px;
+  line-height: 50px;
   margin-left: 10%;
   text-align: center;
   font-family: 'Arsenal', sans-serif;
@@ -97,4 +95,64 @@
   margin-top: 6%;
 }
 
+/*SEGUNDA SECCION INICIO*/
+#check {
+  color: orange;
+  font-size: 25px;
+}
 
+#paragraph h2 {
+  font-family: 'Parisienne', cursive;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 10%;
+  font-size: 30px;
+}
+
+#paragraph p {
+  width: 60%;
+  text-align: center;
+  margin-left: 20%;
+}
+
+/*TERCERA SECCION INICIO*/
+#title h1{
+  text-align: center;
+  margin-top: 5%;
+  font-family: 'Arsenal', sans-serif;
+  font-weight: 700;
+  color: #3498DB  ;
+}
+
+#images img{
+  width: 15%;
+  height: 80%;
+  margin-top: 3%;
+  margin-left: 1.3%;
+}
+
+/*CUARTA SECCION INICIO*/
+#cards {
+  margin-left: %;
+  margin-top: 3%;
+}
+
+#cards1 {
+  border: 1px solid #2ECC71;
+}
+
+.card-body {
+  border-top: 1px solid #2ECC71;
+  height: 5vh;
+}
+
+#cards p{
+  text-align: center;
+  font-family: 'Arsenal', sans-serif;
+  font-size: 20px;
+  margin-top: -12%;
+}
+
+#cards p a{
+  color: #000;
+}
