--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,3 +156,80 @@
 #cards p a{
   color: #000;
 }
+
+/*QUINTA SECCION INICIO*/
+#fiveSection {
+  background-color: #2ECC71;
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  margin-top: 5%;
+}
+
+#box {
+  width: 50%;
+  height: 80%;
+  margin-top: 10%;
+  margin-left: -30%;
+}
+
+#title2 h1{
+  text-align: center;
+  margin-top: 2%;
+  margin-left: -20%;
+  font-family: 'Arsenal', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  color: #000;
+}
+
+#title3 {
+  margin-top: -8%;
+}
+
+#title3 h3 {
+  text-align: center;
+  font-family: 'Arsenal', sans-serif;
+  font-weight: 600;
+  font-size: 22px;
+  margin-top: 8%;
+}
+
+#title3 p {
+  text-align: center;
+  width: 70%;
+  margin-left: 15%;
+}
+
+#key {
+  width: 30%;
+  height: 70%;
+  margin-left: 700%;
+}
+
+/*SEXTA SECCION INICIO*/
+#sixSection {
+  background-color: #82E0AA;
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  margin-top: 5%;
+}
+
+#local {
+  width: 100%;
+  height: 120%;
+}
+
+#text3 h1 {
+  text-align: center;
+  margin-top: 10%;
+  font-family: 'Arsenal', sans-serif;
+  font-weight: 600;
+}
+
+#text3 p {
+  text-align: center;
+  font-size: 20px;
+
+}
