--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,8 +296,7 @@ margin-left: 15%;
   margin-top: 4.5%;
 }
 
-
-/*Tarjetas*/
+/*TARJETAS DE TELEFONOS*/
 
 .card{
   margin-bottom: 10em;
@@ -308,4 +307,3 @@ margin-left: 15%;
 .card-body{
   height: auto; 
 }
-
